Imported GNU Classpath 0.19 + gcj-import-20051115.        * sources.am: Regenerated.        * Makefile.in: Likewise.        * scripts/makemake.tcl: Use glob -nocomplain.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@107049 138bc75d-0d04-0410-961f-82ee72b054a4